There is no code left that uses disk size data, so don't query it. This also failed when querying the simulated block device from mfs. Fixes PR kern/42782.